- update icon styling

--- a/src/FlatMate.Web/Areas/Account/Views/Login/Index.cshtml
+++ b/src/FlatMate.Web/Areas/Account/Views/Login/Index.cshtml
@@ -12,7 +12,7 @@
     <div class="alert-wrapper">
         @if (Model.IsError)
         {
-            <div class="alert alert-danger">@Model.Result.Message</div>
+            <div class="alert alert-error">@Model.Result.Message</div>
         }
     </div>
 
