- added product view

--- a/src/FlatMate.Web/Areas/Account/Views/MyProfile/Index.cshtml
+++ b/src/FlatMate.Web/Areas/Account/Views/MyProfile/Index.cshtml
@@ -4,6 +4,7 @@
     Layout = "_Layout";
     ViewData["Title"] = "Mein Profil";
     ViewData["PageTitle"] = "Mein Profil";
+    ViewData["MainClass"] = "myprofileindex";
 }
 
 <section class="container">
@@ -20,7 +21,7 @@
 
     <div class="standard-box flex-row" style="padding: 1em">
         <div class="picture-wrapper">
-            <img src="~/img/account/user-default.png" alt="profil picture" class="picture"/>
+            <img src="~/img/account/user-default.png" alt="profil picture" class="picture" />
         </div>
 
         <div class="informations">
