--- a/src/FlatMate.Web/wwwroot/css/shared/layout.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/layout.scss
@@ -18,11 +18,14 @@
 
     h1,
     h2,
-    h3,
     h4,
     h5,
     h6 {
         margin-bottom: 0;
+    }
+
+    h3 {
+        margin-bottom: .5rem;
     }
 }
 
@@ -43,36 +46,21 @@
     a + a {
         margin: 0 0 0 .5rem;
     }
+
+    h3 {
+        margin-bottom: 0;
+    }
 }
 
 @media (min-width: 576px) {
     .card-columns {
         column-count: 3;
         column-gap: 1.25rem;
-        
+
         &.col-4 {
             column-count: 4;
         }
     }
-}
-
-@media (min-width: 576px) {
-    .card-columns .card {
-        display: inline-block;
-        width: 100%;
-    }
-}
-
-.card-columns .card {
-    margin-bottom: .75rem;
-}
-
-.card {
-    display: flex;
-    flex-direction: column;
-    word-wrap: break-word;
-    background-color: #fff;
-    box-shadow: 0 1px 1px 0 rgba(50, 50, 50, .4);
 }
 
 .standard-box {
@@ -81,6 +69,16 @@
     background-color: #fff;
 }
 
-/*.standard-box + .standard-box {
-    margin-top: .5rem;
-}*/
+.standard-box + h3 {
+    margin-top: 2rem;
+}
+
+a {
+    &.standard-box {
+        color: $color-font;
+
+        &:hover {
+            color: $color-font;
+        }
+    }
+}
