--- a/src/FlatMate.Web/Areas/Offers/Views/Market/View.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/Market/View.cshtml
@@ -3,26 +3,42 @@
 @{
     Layout = "_Layout";
     ViewData["Title"] = Model.Market.Name;
-    ViewData["PageTitle"] = Model.Market.Name;
+    ViewData["PageTitle"] = "Im Angebot";
 }
 
 <section class="container">
 
+    <div class="standard-box flex-row vertical-center" style="padding:1rem;">
+        <div style="min-width:150px; margin-right:1rem;">
+            <img src="@Model.Market.Company.ImageLink" height="66" />
+        </div>
+        <div style="display:flex; flex-direction: column; justify-content:center">
+            <div>
+                <span style="font-size: 1.5rem;">@Model.Market.Name</span>
+            </div>
+            <div>
+                <small>@Model.Market.Street, @Model.Market.PostalCode @Model.Market.City</small>
+            </div>
+        </div>
+        <div style="text-align:right; flex-grow:1">
+            @Model.Offers.Count Produkte im Angebot
+        </div>
+    </div>
+    
     @{
         var offersByProductCategory = Model.Offers.OrderByDescending(o => o.Product.ProductCategory.SortWeight)
                                                   .GroupBy(o => o.Product.ProductCategory.Id.Value);
     }
-
-
+    
     @foreach (var offersGroup in offersByProductCategory)
     {
-        <h3 style="margin: 1rem 0;">@Model.ProductCategories[offersGroup.Key].Name</h3>
+        <h3>@Model.ProductCategories[offersGroup.Key].Name</h3>
 
         <div class="grid col-5">
 
             @foreach (var offer in offersGroup.OrderBy(x => x.Product.ExternalId))
-                {
-                <div class="standard-box offer-box">
+            {
+                <a asp-area="Offers" asp-controller="Product" asp-action="View" asp-route-id="@offer.ProductId" class="standard-box offer-box">
 
                     <div class="image">
                         <img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="@offer.ImageUrl?resize=150px:150px" width="150" height="150" />
@@ -35,8 +51,7 @@
                     <div class="price">
                         <span style="font-size:1.5rem">@offer.Price €</span>
                     </div>
-
-                </div>
+                </a>
             }
 
         </div>
