--- a/src/FlatMate.Web/wwwroot/css/offers/productview.scss
+++ b/src/FlatMate.Web/wwwroot/css/offers/productview.scss
@@ -1,6 +1,6 @@
 ﻿@import '../variables.scss';
 
-.myprofileindex {
+.productview {
     .picture-wrapper {
         border: 2px $color-border solid;
         margin-right: 1rem;
