--- a/src/FlatMate.Web/wwwroot/css/shared/navigation.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/navigation.scss
@@ -26,7 +26,7 @@ nav {
     position: fixed;
     overflow: hidden;
     background-color: #fff;
-    padding-top: 64px;
+    padding-top: $header-height;
     border-right: 1px solid $color-border;
     box-shadow: 0 0 2px $color-border;
     z-index: 10;
@@ -60,7 +60,7 @@ nav {
 }
 
 nav + main {
-    padding-top: 64px;
+    padding-top: $header-height;
 }
 
 @media all and (min-width: 1201px) {
