--- a/src/FlatMate.Web/Areas/Offers/Views/Product/View.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/Product/View.cshtml
@@ -9,33 +9,42 @@
 
 <section class="container">
 
-    <div class="standard-box flex-row no-wrap" style="padding: 1em;">
+    <div class="row">
+        <div class="col">
+            <div class="standard-box product-info-box">
 
-        <div class="picture-wrapper">
-            <img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="@Model.Product.ImageUrl?resize=150px:150px" width="150" height="150" />
-        </div>
+                <div class="row no-gutters">
+                    <div class="col col-picture">
+                        <div class="picture-wrapper">
+                            <img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="@Model.Product.ImageUrl?resize=150px:150px" />
+                        </div>
+                    </div>
+                    <div class="col-md">
+                        <div class="informations" style="display:flex; flex-direction:column">
+                            <div style="font-size:1.5rem;">@Model.Product.Name</div>
 
-        <div class="informations" style="display:flex; flex-direction:column">
-            <div style="font-size:1.5rem;">@Model.Product.Name</div>
-
-            <div>@Model.Product.Description</div>
+                            <div>@Model.Product.Description</div>
 
 
-            @if (Model.Product.Price > 0)
+                            @if (Model.Product.Price > 0)
             {
-                <div style="margin-top:1rem; font-size:1.2rem; flex-grow:1; display: flex;  justify-content: flex-end;  flex-direction: column;">
-                    <text>@Model.Product.Price € (@Model.Product.SizeInfo)</text>
+                                <div style="margin-top:1rem; font-size:1.2rem; flex-grow:1; display: flex;  justify-content: flex-end;  flex-direction: column;">
+                                    <text>@Model.Product.Price € (@Model.Product.SizeInfo)</text>
+                                </div>
+                            }
+                            else
+                            {
+                                <div>@Model.Product.SizeInfo</div>
+                            }
+
+                        </div>
+                    </div>
                 </div>
-            }
-            else
-            {
-                <div>@Model.Product.SizeInfo</div>
-            }
 
+            </div>
         </div>
-
     </div>
-
+    
     <h3>Im Angebot</h3>
     <div class="standard-box">
         <table>
