--- a/src/FlatMate.Web/wwwroot/css/offers/productview.scss
+++ b/src/FlatMate.Web/wwwroot/css/offers/productview.scss
@@ -1,17 +1,29 @@
 ﻿@import '../variables.scss';
 
 .productview {
+    .product-info-box {
+        padding: 1rem;
+    }
+
+    .col-picture {
+        flex: 1 0 200px;
+        justify-content: center;
+        display: flex;
+    }
+
+    @media (min-width: 768px) {
+        .col-picture {
+            flex-grow: 0;
+            margin-right: 1rem;
+        }
+    }
+
     .picture-wrapper {
         border: 2px $color-border solid;
         margin-right: 1rem;
         padding: 1rem;
-        flex-shrink: 0;
-        width: calc(150px + 2rem + 4px);
-
-        .picture {
-            height: 150px;
-            width: 150px;
-        }
+        width: 200px;
+        height: 200px;
     }
 
     .informations {
