--- a/src/FlatMate.Web/wwwroot/css/shared/layout.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/layout.scss
@@ -10,7 +10,8 @@
     }
 }
 
-.container {
+// Obsolete
+/*section.container {
     margin: 0 auto;
     max-width: 1020px;
     padding: .5rem 1rem 0 1rem;
@@ -27,7 +28,12 @@
     h3 {
         margin-bottom: .5rem;
     }
+}*/
+
+.container{
+    padding-top: 15px;
 }
+
 
 .actions {
     margin-bottom: .5rem;
@@ -52,25 +58,14 @@
     }
 }
 
-@media (min-width: 576px) {
-    .card-columns {
-        column-count: 3;
-        column-gap: 1.25rem;
-
-        &.col-4 {
-            column-count: 4;
-        }
-    }
-}
-
 .standard-box {
-    width: 100%;
+    //width: 100%;
     box-shadow: 0 1px 1px 0 rgba(50, 50, 50, .4);
     background-color: #fff;
 }
 
-.standard-box + h3 {
-    margin-top: 2rem;
+.row + h3 {
+    margin-top: 1rem;
 }
 
 a {
