- css refactoring - analyzer

--- a/src/FlatMate.Web/Areas/Offers/Views/Product/View.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/Product/View.cshtml
@@ -9,50 +9,43 @@
 
 <section class="container">
 
-    <div class="row">
-        <div class="col">
-            <div class="standard-box product-info-box">
+    <div class="standard-box product-info-box">
 
-                <div class="row no-gutters">
-                    <div class="col col-picture">
-                        <div class="picture-wrapper">
-                            <img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="@Model.Product.ImageUrl?resize=150px:150px" />
-                        </div>
-                    </div>
-                    <div class="col-md">
-                        <div class="informations" style="display:flex; flex-direction:column">
-                            <div style="font-size:1.5rem;">@Model.Product.Name</div>
-
-                            <div>@Model.Product.Description</div>
-
-
-                            @if (Model.Product.Price > 0)
-            {
-                                <div style="margin-top:1rem; font-size:1.2rem; flex-grow:1; display: flex;  justify-content: flex-end;  flex-direction: column;">
-                                    <text>@Model.Product.Price € (@Model.Product.SizeInfo)</text>
-                                </div>
-                            }
-                            else
-                            {
-                                <div>@Model.Product.SizeInfo</div>
-                            }
-
-                        </div>
-                    </div>
+        <div class="row">
+            <div class="col col-picture">
+                <div class="picture-wrapper">
+                    <img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="@Model.Product.ImageUrl?resize=150px:150px" />
                 </div>
+            </div>
+            <div class="col-md col-product-info">
+                <div style="font-size:1.5rem;">@Model.Product.Name</div>
 
+                <div>@Model.Product.Description</div>
+
+                @if (Model.Product.Price > 0)
+                {
+                    <div class="product-price">
+                        <text>@Model.Product.Price € (@Model.Product.SizeInfo)</text>
+                    </div>
+                }
+                else
+                {
+                    <div>@Model.Product.SizeInfo</div>
+                }
             </div>
         </div>
+
     </div>
-    
+
     <h3>Im Angebot</h3>
     <div class="standard-box">
         <table>
             <thead>
                 <tr>
-                    <th width="33%">Von</th>
-                    <th width="33%">Bis</th>
-                    <th width="33%">Preis</th>
+                    <th width="20%">Von</th>
+                    <th width="20%">Bis</th>
+                    <th width="20%">Preis</th>
+                    <th width="40%">Markt</th>
                 </tr>
             </thead>
 
@@ -63,6 +56,7 @@
                         <td>@offer.From.ToShortDateString()</td>
                         <td>@offer.To.ToShortDateString()</td>
                         <td>@offer.Price €</td>
+                        <td>@offer.Market.Name</td>
                     </tr>
                 }
             </tbody>
