- merged api module into other modules - small styling changes

--- a/src/FlatMate.Web/Views/Error/Index.cshtml
+++ b/src/FlatMate.Web/Views/Error/Index.cshtml
@@ -1,8 +1,18 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    Layout = "_Layout";
+    ViewData["Title"] = "Interner Fehler";
+    ViewData["PageTitle"] = "Interner Fehler";
 }
 
 
 <section class="container">
-    <h1>Error :(</h1>
+
+    <div class="row">
+        <div class="col">
+            <div class="standard-box" style="padding: 1rem;">
+                Leider ist ein interner Fehler aufgetreten :(
+            </div>
+        </div>
+    </div>
+
 </section>
