--- a/src/FlatMate.Web/Views/Error/PageNotFound.cshtml
+++ b/src/FlatMate.Web/Views/Error/PageNotFound.cshtml
@@ -6,5 +6,14 @@
 
 
 <section class="container">
-    <h1>Seite nicht gefunden :(</h1>
+    
+    <div class="row">
+        <div class="col">
+            <div class="standard-box" style="padding: 1rem;">
+                vier null vier <br />
+                Die Seite konnte nicht gefunden werden :(
+            </div>
+        </div>
+    </div>
+
 </section>
