--- a/src/FlatMate.Web/Views/Shared/_Layout.cshtml
+++ b/src/FlatMate.Web/Views/Shared/_Layout.cshtml
@@ -2,6 +2,7 @@
 
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,10 +12,11 @@
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
 
-    <link asp-href-include="~/dist/app.css" rel="stylesheet" />
-
+    <link asp-href-include="~/dist/app.css" rel="stylesheet" asp-append-version="true" />
 </head>
+
 <body>
+
     <header>
         <div class="header-wrapper">
             <div class="page-title">
@@ -97,10 +99,11 @@
         @Json.Serialize(Model.Result)
     </script>
 
-    <script asp-src-include="~/dist/vendor.js" type="text/javascript"></script>
-    <script asp-src-include="~/dist/app.js" type="text/javascript"></script>
+    <script asp-src-include="~/dist/vendor.js" asp-append-version="true" type="text/javascript"></script>
+    <script asp-src-include="~/dist/app.js" asp-append-version="true" type="text/javascript"></script>
 
     @RenderSection("pageScript", false)
 
 </body>
+
 </html>
