--- a/src/FlatMate.Web/Areas/Offers/Views/Market/Index.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/Market/Index.cshtml
@@ -4,7 +4,7 @@
     Layout = "_Layout";
     ViewData["Title"] = "Märkte";
     ViewData["PageTitle"] = "Märkte";
-    ViewData["MainClass"] = "marketindex";
+    ViewData["MainClass"] = "market-index";
 }
 
 <section class="container">
