--- a/src/FlatMate.Web/Areas/Offers/Views/Product/View.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/Product/View.cshtml
@@ -4,7 +4,7 @@
     Layout = "_Layout";
     ViewData["Title"] = Model.Product.Name;
     ViewData["PageTitle"] = "Produktdetails";
-    ViewData["MainClass"] = "productview";
+    ViewData["MainClass"] = "product-view";
 }
 
 <section class="container">
