--- a/src/FlatMate.Web/wwwroot/css/offers/product-view.scss
+++ b/src/FlatMate.Web/wwwroot/css/offers/product-view.scss
@@ -3,7 +3,7 @@
 $picture-wrapper-padding: 15px;
 $picture-wrapper-width: 150px + (2 * $picture-wrapper-padding) + 4px;
 
-.productview {
+.product-view {
     .product-info-box {
         padding: 1rem;
     }
