--- a/src/FlatMate.Web/wwwroot/css/shared/layout.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/layout.scss
@@ -39,6 +39,7 @@
     margin-bottom: .5rem;
 
     a {
+        display:block;
         background-color: #fff;
         border-bottom: 2px $color-border solid;
         padding: .5rem;
