--- a/src/FlatMate.Web/Areas/Offers/Views/Market/View.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/Market/View.cshtml
@@ -4,33 +4,37 @@
     Layout = "_Layout";
     ViewData["Title"] = Model.Market.Name;
     ViewData["PageTitle"] = "Im Angebot";
-    ViewData["MainClass"] = "marketview";
+    ViewData["MainClass"] = "market-view";
 }
 
 <section class="container">
 
+    <div class="row align-right actions">
+        <div class="col-auto">
+            <a asp-controller="ProductFavorite" asp-action="Manage" asp-route-marketId="@Model.Market.Id">Favoriten verwalten</a>
+        </div>
+    </div>
 
-        <div class="standard-box market-info-box">
+    <div class="standard-box market-info-box">
 
-            <div class="row">
-                <div class="col-sm-12 col-md-4 col-market-image">
-                    <img src="@Model.Market.Company.ImageLink" height="66" />
+        <div class="row">
+            <div class="col-sm-12 col-md-4 col-market-image">
+                <img src="@Model.Market.Company.ImageLink" height="66" />
+            </div>
+            <div class="col-sm-12 col-md-5 col-market-info">
+                <div>
+                    <span style="font-size: 1.5rem;">@Model.Market.Name</span>
                 </div>
-                <div class="col-sm-12 col-md-5 col-market-info">
-                        <div>
-                            <span style="font-size: 1.5rem;">@Model.Market.Name</span>
-                        </div>
-                        <div>
-                            <small>@Model.Market.Street, @Model.Market.PostalCode @Model.Market.City</small>
-                        </div>
-                </div>
-                <div class="col-sm-12 col-md-3 col-offer-count">
-                    @Model.Offers.Count Produkte im Angebot<br />
-                    von @Model.OffersFrom.ToShortDateString() bis @Model.OffersTo.ToShortDateString()
+                <div>
+                    <small>@Model.Market.Street, @Model.Market.PostalCode @Model.Market.City</small>
                 </div>
             </div>
-
+            <div class="col-sm-12 col-md-3 col-offer-count">
+                @Model.Offers.Count Produkte im Angebot<br />
+                von @Model.OffersFrom.ToShortDateString() bis @Model.OffersTo.ToShortDateString()
+            </div>
         </div>
+    </div>
 
     @{
         var offersByProductCategory = Model.Offers.OrderByDescending(o => o.Product.ProductCategory.SortWeight)
@@ -62,9 +66,6 @@
                     </a>
                 </div>
             }
-
         </div>
     }
-
-
 </section>
